--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Neil Shen / New Romantics"
+title                    : "Together We Rise 🏳️‍🌈"
 title_separator          : "-"
 name                     : &name "Neil Shen"
 description              : &description "The Best People in Life Are Free. 🏳️‍🌈"
